# stream-server

./: .gitignore  Cargo.toml  LICENSE  README.md  stats_output.json  vcpkg.json
.github/: dependabot.yml
.github/workflows/: release.yml
bindings/async-rar/: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs
bindings/async-rar/src/: archive.rs  async_archive.rs  error.rs  ffi.rs  lib.rs
bindings/async-rar/src/cpp/: stubs.cpp  wrappers.hpp
bindings/async-sevenz/: .gitattributes  Cargo.toml  build.rs
bindings/async-sevenz/src/: ffi.rs  lib.rs
bindings/async-sevenz/src/cpp/: guids.cpp  stream.cpp  wrappers.hpp  wrappers_api.h
bindings/libtorrent-sys/: Cargo.toml  build.rs
bindings/libtorrent-sys/cpp/: memory_storage.cpp  memory_storage.hpp  wrapper.cpp  wrapper.h
bindings/libtorrent-sys/src/: lib.rs
docs/: bittorrent-settings.md
enginefs/: Cargo.toml  build.rs
enginefs/src/: cache.rs  disk_cache.rs  engine.rs  files.rs  hls.rs  hwaccel.rs  lib.rs  metadata_cache.rs  metadata_pins.rs  piece_cache.rs  piece_waiter.rs  subtitles.rs  tracker_prober.rs  trackers.rs
enginefs/src/backend/: librqbit.rs  libtorrent.rs  metadata.rs  mod.rs  priorities.rs
enginefs/src/backend/libtorrent/: constants.rs  disk_stream.rs  handle.rs  helpers.rs  mod.rs  stream.rs
libtorrent-sys/: Cargo.toml  README.md  build.rs
libtorrent-sys/cpp/: wrapper.cpp
libtorrent-sys/src/: lib.rs
scripts/: generate_release_notes.py  install-stremio-runtime-stub.ps1
scripts/tests/: test_generate_release_notes.py
server/: Cargo.toml  build.rs
server/examples/: embed_thread.rs
server/src/: cache_cleaner.rs  ffmpeg_setup.rs  jni.rs  lib.rs  main.rs  ssdp.rs  state.rs  tray.rs
server/src/archives/: bridge.rs  cache.rs  mod.rs  rar.rs  sevenz.rs  stremio-core-development.code-workspace  tar.rs  tgz.rs  zip.rs
server/src/archives/nzb/: mod.rs  nntp.rs  parser.rs  session.rs  stream.rs
server/src/diagnostics/: logging.rs  mod.rs
server/src/local_addon/: index.rs  manifest.rs  mod.rs  parser.rs  resolver.rs  scanner.rs  torrent.rs
server/src/routes/: archive.rs  casting.rs  compat.rs  downloader.rs  engine.rs  ftp.rs  hls.rs  local_addon.rs  mod.rs  nzb.rs  peers.rs  proxy.rs  stream.rs  subtitles.rs  system.rs  update.rs  youtube.rs
server/src/tui/: log_layer.rs  mod.rs
server/src/updater/: assets.rs  changelog.rs  error.rs  github.rs  idle.rs  installer.rs  mod.rs  staging.rs  state.rs  version.rs
server/tests/: embed.rs
server/wix/: main.wxs
settings-gui/: Cargo.toml  build.rs
settings-gui/src/: lib.rs  main.rs
settings-gui/ui/: app.slint  components.slint  icons.slint  theme.slint
stremio-runtime-stub/: Cargo.toml
stremio-runtime-stub/src/: main.rs
triplets/: x64-linux-release.cmake  x64-windows-static-release.cmake
updater-helper/: Cargo.toml  build.rs
updater-helper/src/: main.rs
vcpkg-overlays/libtorrent/: portfile.cmake
