[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
enginefs = { path = "../enginefs" }
axum = { version = "0.7", features = ["default"] }
tokio = { version = "1.42", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
anyhow = "1.0"
tokio-util = { version = "0.7.17", features = ["io"] }
hex = "0.4"
librqbit = "8.1.1"
if-addrs = "0.14.0"
urlencoding = "2.1"
regex = "1.11"
reqwest = { version = "0.12.26", features = ["json", "stream"] }
futures-util = "0.3.31"
zip = "6.0.0"
base64 = "0.22.1"
walkdir = "2.5.0"
url = "2.5.7"
rusty_ytdl = "0.7.4"
mime_guess = "2.0.5"
unrar = "0.5.8"
