[package]
name = "server"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "High-performance torrent streaming server"
authors = ["Perpetus <perpetus@example.com>"]

[dependencies]
enginefs = { path = "../enginefs" }
axum = { version = "0.8.8", features = ["default"] }
tokio = { version = "1.42", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
anyhow = "1.0"
tokio-util = { version = "0.7.17", features = ["io"] }
hex = "0.4"
librqbit = { version = "8.1.1", optional = true }
if-addrs = "0.14.0"
urlencoding = "2.1"
regex = "1.11"
reqwest = { version = "0.12.26", features = ["json", "stream"] }
futures-util = "0.3.31"
zip = "2.0"
base64 = "0.22.1"
walkdir = "2.5.0"
url = "2.5.7"
rusty_ytdl = "0.7.4"
mime_guess = "2.0.5"
unrar = "0.5.8"
lz-str = "0.2.1"
tempfile = "3.23.0"
mimalloc = { version = "0.1.48", default-features = false }
rayon = "1.11.0"
sha2 = "0.10"
ratatui = "0.29.0"
crossterm = "0.29.0"
crossbeam-channel = "0.5.13"
notify = { version = "8.2.0", default-features = false, features = [
    "macos_kqueue",
] }
sevenz-rust = "0.6"
dirs = "6.0"
dashmap = "6.1.0"
tar = "0.4.44"
flate2 = "1.1.5"
uuid = "1.19.0"
quick-xml = { version = "0.38.4", features = ["serialize"] }
yenc = "0.2.2"
tokio-native-tls = "0.3.1"
native-tls = "0.2.14"
async-channel = "2.5.0"
bytes = "1.11.0"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
ssdp-client = "2.1.0"

[features]
default = ["libtorrent"]
libtorrent = ["enginefs/libtorrent"]
librqbit = ["enginefs/librqbit", "dep:librqbit"]

[package.metadata.deb]
maintainer = "stream-server maintainers"
copyright = "2025"
license-file = ["../LICENSE", "0"]
extended-description = "High-performance torrent streaming server with HLS transcoding support"
section = "net"
priority = "optional"
assets = [["target/release/server", "usr/bin/stream-server", "755"]]

[package.metadata.wix]
upgrade-guid = "A1B2C3D4-E5F6-7890-ABCD-EF1234567890"
path-guid = "B2C3D4E5-F678-90AB-CDEF-123456789012"
license = false
eula = false
