[package]
name = "server"
version = "0.1.8"
edition = "2024"
license = "MIT"
description = "High-performance torrent streaming server"
authors = ["Perpetus <perpetus@example.com>"]

[lib]
name = "stream_server"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
jni = "0.22.4"
once_cell = "1.19"
enginefs = { path = "../enginefs" }
axum = { version = "0.8.8", features = ["default"] }
tokio = { version = "1.42", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors", "trace", "fs", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2.4"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
anyhow = "1.0"
tokio-util = { version = "0.7.17", features = ["io", "compat"] }
hex = "0.4"
librqbit = { version = "8.1.1", optional = true }
if-addrs = "0.15.0"
urlencoding = "2.1"
regex = "1.11"
reqwest = { version = "0.13", features = ["blocking", "json", "stream"] }
futures-util = "0.3.31"
async-trait = "0.1.89"
async_zip = { version = "0.0.18", features = ["deflate", "tokio"] }
base64 = "0.22.1"
walkdir = "2.5.0"
url = "2.5.7"
rusty_ytdl = "0.7.4"
mime_guess = "2.0.5"
async-rar = { path = "../bindings/async-rar" }
lz-str = "0.2.1"
tempfile = "3.23.0"
mimalloc = { version = "0.1.48", default-features = false }
rayon = "1.11.0"
sha2 = "0.11.0"
semver = "1.0"
ratatui = "0.30.0"
crossterm = "0.29.0"
crossbeam-channel = "0.5.13"
notify = { version = "8.2.0", default-features = false, features = [
    "macos_kqueue",
] }

dirs = "6.0"
dashmap = "6.1.0"
tar = "0.4.44"
flate2 = "1.1.5"
uuid = "1.19.0"
quick-xml = { version = "0.40.1", features = ["serialize"] }
yenc = "0.2.2"
tokio-native-tls = "0.3.1"
native-tls = "0.2.14"
async-channel = "2.5.0"
bytes = "1.11.0"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
ssdp-client = "2.1.0"
fslock = "0.2.1"
open = "5.3.3"
image = "0.25.9"
ico = "0.5.0"
zip = "8.6.0"
async-sevenz = { path = "../bindings/async-sevenz" }
chrono = "0.4.42"
sysinfo = "0.39.5"

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
tao = "0.35.3"
settings-gui = { path = "../settings-gui" }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
tray-icon = { version = "0.24.1", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
tray-icon = { version = "0.24.1", default-features = false, features = ["gtk"] }

[target.'cfg(target_os = "android")'.dependencies]
rustls-platform-verifier = "0.7.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }


[features]
default = ["libtorrent"]
libtorrent = ["enginefs/libtorrent"]
librqbit = ["enginefs/librqbit", "dep:librqbit"]

[package.metadata.deb]
maintainer = "stream-server maintainers"
copyright = "2025"
license-file = ["../LICENSE", "0"]
extended-description = "High-performance torrent streaming server with HLS transcoding support"
section = "net"
priority = "optional"
assets = [
    ["target/release/server", "usr/bin/stream-server", "755"],
    ["target/release/settings-gui", "usr/bin/settings-gui", "755"],
]

[package.metadata.wix]
upgrade-guid = "A1B2C3D4-E5F6-7890-ABCD-EF1234567890"
path-guid = "B2C3D4E5-F678-90AB-CDEF-123456789012"
license = false
eula = false

[build-dependencies]
winres = "0.1"
chrono = "0.4.42"
