[package]
name = "async-sevenz"
version = "0.1.0"
edition = "2021"

[dependencies]
autocxx = "0.30"
cxx = "1.0"
tokio = { version = "1.48", features = ["rt", "sync", "io-util"] }
thiserror = "2"
moveit = "0.6"

[build-dependencies]
autocxx-build = "0.30"
cc = "1.2"
glob = "0.3"

[dev-dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
